# standard-ranklist-utils

./: .eslintrc.js  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml  test.yml
docs/: srk-diagnostics-design.md  srk-patch-design.md
go/: README.md  api_test.go  constants.go  contract_test.go  diagnostics.go  doc.go  formatters.go  go.mod  patch.go  ranklist.go  resolvers.go  types.go
go/testdata/fixtures/: contract-fixtures.json
js/: README.md  package.json  tsconfig.test.json
js/scripts/: generate-fixtures.ts
js/src/: diagnostics.ts  enums.ts  formatters.ts  index.ts  patch.ts  ranklist.ts  resolvers.ts
js/tests/: diagnostics.test.ts  enums.test.ts  formatters.test.ts  index.test.ts  patch.test.ts  ranklist.test.ts  resolvers.test.ts  types.test.ts
python/: README.md  pyproject.toml
python/src/standard_ranklist_utils/: __init__.py  constants.py  diagnostics.py  enums.py  formatters.py  patch.py  ranklist.py  resolvers.py  types.py
python/tests/: test_contract.py
python/tests/fixtures/: contract-fixtures.json
scripts/: check-fixtures.mjs  postcompile.js  prevent-root-pack.mjs  run-go-tests.mjs  run-python-tests.mjs  sync-fixtures.mjs
src/: cli.ts  constants.ts  diagnostics.ts  formatters.ts  index.ts  ranklist.ts  resolvers.ts  types.ts
tests/: cli.test.ts  constants.test.ts  diagnostics.test.ts  index.test.ts  resolvers.test.ts
