[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "algoux-standard-ranklist-utils"
version = "0.3.0"
description = "Utilities for Standard Ranklist (srk)."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "bLue" }]
keywords = ["standard ranklist", "srk", "ranklist", "icpc"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/algoux/standard-ranklist-utils"
Repository = "https://github.com/algoux/standard-ranklist-utils"
Issues = "https://github.com/algoux/standard-ranklist-utils/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.5",
  "twine>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/standard_ranklist_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
